# recursive-cascade

./: .env  README.md  compute-server.js  package-lock.json  package.json  report-server.js  research-server.js  server.js  start.js
backend/: contract_mock.js  eventBus.js  pmAgent.js  soroban_client.js  x402_mpp.js
backend/agents/: clientAgent.js  computeAgent.js  reportAgent.js  researchAgent.js
contracts/: Cargo.toml
contracts/src/: lib.rs
dashboard/: index.html
